Add reservations to calendar model in backend
